# DiscardWisdom

./: DiscardWisdom.ipynb  HKMahjong.ipynb  KemonoTileDetection.py  KemonoTileDetection_v4.py  README.md  app_gui.py  autoplay_README.md  autoplay_v11.py  autoplay_v16.py  autoplay_v17.py  autoplay_v21.py  autoplay_v6.py  autoplay_v7.py  autoplay_v7_commands.md  autoplay_v8.py  autoplay_v9_latest.py  commands.md  discard_wisdom.py  file_utils.py  image_utils.py  mahjong_checker.py  pyproject.toml  requirements.txt  tile_recognition.py
RiichiDiscardWisdom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
archive/: tile_recognition.py
autoplay_archive/: autoplay_v11.py  autoplay_v12.py  autoplay_v13.py  autoplay_v14.py  autoplay_v15.py  autoplay_v17.py  autoplay_v3.py  autoplay_v4.py  autoplay_v5.py  autoplay_v7.py  autoplay_v8.py
mahjong/: autoplay.py  file_utils.py  image_utils.py  mahjong_checker.py  mahjong_checker_v2.py  mahjong_checker_v3.py
riichi_discard_wisdom/: cli_defense.py  cli_efficiency.py  cli_efficiency_old.py
riichi_discard_wisdom/defense/: __init__.py  indexing.py  safety.py
riichi_discard_wisdom/efficiency/: __init__.py  constants.py  shanten.py  tiles.py  ukeire.py  utils.py
templates/large_discards/: Untitled.ipynb
tests/: test_e2e_defense.py  test_e2e_efficiency.py
